--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
-    "@mui/material": "^6.4.8",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "assert": "^2.1.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "firebase": "^11.3.1",
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.3.2",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
