--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ PyGraph/campaign_tracker/koafy-5bbb8-firebase-adminsdk-fbsvc-b7c718e1b8.json
 
 # Ignorar copia o versión antigua del código fuente
 /src2/
+/src22/
